Add /tourist-attractions-photos to imgs path . Run Build

--- a/src/components/css/about.css
+++ b/src/components/css/about.css
@@ -23,7 +23,7 @@
 
 .about_photo {
 	/* background-image: url('https://via.placeholder.com/150'); */
-	background-image: url('/imgs/47808845.png');
+	background-image: url('/tourist-attractions-photos/imgs/47808845.png');
 	width: 150px;
 	height: 150px;
 	float: left;
